# Cloudflare_Bindings_Explorer

./: .gitignore  .vscodeignore  CONTRIBUTING.md  README.md  build.ts  dummy_d1.sqlite  dummy_kv.sqlite  esbuild.js  eslint.config.mjs  package.json  test_d1.ts  test_kv.ts  test_r2.ts  tsconfig.json
.github/workflows/: automerge.yml  build.yml  ci.yml  publish.yml  vscode-smoke.yml
dummy_r2/: file1.txt.metadata
media/: editor.css  editor.js  sqlite-editor.css  sqlite-editor.js
scripts/: build-local.sh  gh-bot-env.sh  gh-bot-token.ts  install-local.sh  prerelease-publish.sh  publish.sh  test.ts  tsconfig.json
scripts/local-wrangler-env/: mockMain.ts  populate-wrangler.ts  seed-local-wrangler.ts  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
scripts/s3-local/: s3-local.ts
scripts/wrangler-local/: wrangler-local.ts
src/: d1.ts  extension.ts  index.test.ts  kv.ts  r2.ts  types.ts
src-rust/bindings-cli/: Cargo.toml
src-rust/bindings-cli/src/: main.rs
src/bindings/: client.ts
src/email/: MailViewer.ts  mime-utils.ts  util.ts
src/fs/: provider.ts
src/local-wrangler/: client.ts  types.ts
src/opendal/: client.ts
src/remote-bindings/: client.ts  types.ts
src/s3/: bindings-client.ts  bun-client.ts  client.ts  listing.ts  ops.ts
src/sqlite/: SqliteVisualEditor.ts  manualDatabases.ts
src/test/: runTest.ts  runUnitTests.ts  test-config.ts
src/tree/: explorer.ts  localWranglerExplorer.ts  localWranglerNodes.ts  nodes.ts  remoteNodes.ts
src/ui/: progress.ts  prompts.ts  secureSetupPanel.ts
src/util/: cache.ts  output.ts  paths.ts  (+1 more)
(+18 files in other folders)
