[package]
name = "bindings-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
keyring = "3.6.3"
opendal = { version = "0.55.0", features = ["services-s3", "services-cloudflare-kv", "services-d1"] }
reqwest = { version = "0.12.9", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["sqlite", "runtime-tokio-rustls"] }
tokio = { version = "1.49.0", features = ["rt", "rt-multi-thread", "macros"] }
